<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Timeanddate">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:background="@drawable/ic_cornerround"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/backbtn"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/back" />


        <LinearLayout
            android:id="@+id/pickuplocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/pick_up_location"
                android:textColor="@color/white" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="350dp"
                android:layout_height="60sp"
                android:id="@+id/yourloc"
                android:layout_marginTop="18dp"
                app:cardCornerRadius="5px">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/ic_vector" />

                <EditText
                    android:id="@+id/mylacation1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="50dp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center_vertical"
                  android:hint="@string/your_location"
                    android:textColor="@color/headlineblue" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/updownarrow"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="154dp"
            android:layout_marginTop="130dp"
            android:background="@drawable/ic_ellipse">

            <ImageView

                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginBottom="5sp"
                android:rotation="90"
                android:src="@drawable/updownarrow" />


        </FrameLayout>
        <FrameLayout
            android:id="@+id/newupdownarrow"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="154dp"
            android:visibility="gone"
            android:layout_marginTop="130dp"
            android:backgroundTint="@color/white"
            android:background="@drawable/ic_ellipse">

            <ImageView

                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginBottom="5sp"
                android:rotation="90"
                android:src="@drawable/updownarrow"
                app:tint="@color/buttoncolor" />


        </FrameLayout>
        <LinearLayout
            android:id="@+id/droplocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="170dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/drop_location"
                android:textColor="@color/white" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="350dp"
                android:layout_height="60sp"
                android:id="@+id/yourdec"
                android:layout_marginTop="18dp"
                app:cardCornerRadius="5px">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/headlineblue"
                    android:src="@drawable/ic_map_pin" />

                <EditText
                    android:id="@+id/droplocation1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="50dp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center_vertical"
                    android:hint="@string/destination"
                    android:textColor="@color/headlineblue" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/please_select_date_amp_time"
        android:textColor="@color/headlineblue"
        app:layout_constraintBottom_toTopOf="@+id/box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frameLayout"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/box"
        android:layout_marginTop="40dp"

        android:background="@drawable/ic_btnoutline"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frameLayout">

        <FrameLayout
            android:id="@+id/datebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_btnshape"
            android:clickable="true"

            android:focusable="true">

            <TextView
                android:id="@+id/datee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/date"
                android:textColor="@color/white" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/timebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_btnwhiteshape"
            android:clickable="true"
            android:focusable="true"

            android:visibility="visible">

            <TextView
                android:id="@+id/timee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/time"
                android:textColor="@color/headlineblue" />
        </FrameLayout>


    </LinearLayout>

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@id/bookbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"

        app:layout_constraintTop_toBottomOf="@+id/box" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timebox"
        android:background="@drawable/ic_tiimebg"
        android:backgroundTint="#F6F6FB"

        app:layout_constraintBottom_toTopOf="@+id/bookbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box"
        app:layout_constraintVertical_bias="0.086" >



    <TextView
        android:id="@+id/hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="Time"
        android:gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_gravity="center_vertical"
        app:layout_constraintBottom_toTopOf="@id/bookbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/box"
        app:layout_constraintVertical_bias="0.166" />
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pm"
            android:visibility="gone"
            android:background="@drawable/ic_timebgshort"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="100dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="PM"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textSize="15dp"
                android:gravity="center_vertical"
                android:fontFamily="@font/poppins_semibold"/>

        </FrameLayout>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/am"
            android:visibility="gone"
            android:background="@drawable/ic_timebgshort"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="100dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="AM"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textSize="15dp"
                android:gravity="center_vertical"
                android:fontFamily="@font/poppins_semibold"/>

        </FrameLayout>
    </FrameLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/bookbtn"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/buttoncolor"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/poppins_semibold"
        android:text="Book"
        android:textColor="@color/white"
        app:cornerRadius="5px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>